@@ -23,6 +23,9 @@ Features:
 	Total inactivity timeout option -T 0 now means 0.0 seconds; up to
 	version 1.8.0.0 it meant no total inactivity timeout.
 
+	Changed socat-chain.sh, socat-mux.sh, and socat-broker.sh to work with
+	older Socat versions.
+
 Porting:
 	Changes for building and testing on NetBSD
 
